force-app/src/objects/OrderApi__Receipt_Line_R__c.object
<CustomObject>
    <description>The Receipt Line (R) tracks the related Receipt Line&apos;s reporting currency and currency conversion rate at the time of creation when Fonteva&apos;s multi-currency is enabled.</description>
    <fields>
        <fullName>OrderApi__Conversion_Gain_Loss__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This value stores the sum of gains and losses created as a result of currency fluctuation for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the sum of gains and losses created as a result of currency fluctuation for this item in the reporting currency.</inlineHelpText>
        <label>Conversion Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Conversion_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This value defines the conversion rate used from the conversion table at the time the record was created.</description>
        <inlineHelpText>This value defines the conversion rate used from the conversion table at the time the record was created.</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Builds a self-parenting relationship for taxes, shipping, adjustments, and other order processing functions.</description>
        <inlineHelpText>Builds a self-parenting relationship for taxes, shipping, adjustments, and other order processing functions.</inlineHelpText>
        <label>Receipt Line (R)</label>
        <referenceTo>OrderApi__Receipt_Line_R__c</referenceTo>
        <relationshipLabel>Receipt Lines (R)</relationshipLabel>
        <relationshipName>Receipt_Lines_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line_Reference__c</fullName>
        <description>System field that creates a one to one relationship to a receipt line.</description>
        <externalId>true</externalId>
        <inlineHelpText>System field that creates a one to one relationship to a receipt line.</inlineHelpText>
        <label>Receipt Line Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the reporting Receipt Line to the reporting Receipt when Fonteva&apos;s multi-currency is enabled.</description>
        <inlineHelpText>Relates the reporting Receipt Line to the reporting Receipt when Fonteva&apos;s multi-currency is enabled.</inlineHelpText>
        <label>Receipt (R)</label>
        <referenceTo>OrderApi__Receipt_R__c</referenceTo>
        <relationshipLabel>Receipt Lines (R)</relationshipLabel>
        <relationshipName>Receipt_Lines_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the reporting Receipt Line to the reporting Sales Order Line when Fonteva&apos;s multi-currency is enabled.</description>
        <inlineHelpText>Relates the reporting Receipt Line to the reporting Sales Order Line when Fonteva&apos;s multi-currency is enabled.</inlineHelpText>
        <label>Sales Order Line (R)</label>
        <referenceTo>OrderApi__Sales_Order_Line_R__c</referenceTo>
        <relationshipLabel>Receipt Lines (R)</relationshipLabel>
        <relationshipName>Receipt_Lines_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_R__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the reporting Receipt Line to the reporting Sales Order when Fonteva&apos;s multi-currency is enabled.</description>
        <inlineHelpText>Relates the reporting Receipt Line to the reporting Sales Order when Fonteva&apos;s multi-currency is enabled.</inlineHelpText>
        <label>Sales Order (R)</label>
        <referenceTo>OrderApi__Sales_Order_R__c</referenceTo>
        <relationshipLabel>Receipt Lines (R)</relationshipLabel>
        <relationshipName>Receipt_Lines_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This value stores the total paid for this item in the reporting currency.</description>
        <inlineHelpText>This value stores the total paid for this item in the reporting currency.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Receipt Line (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Receipt Line (R) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Lines (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>